# gitlogue

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.kiro/specs/runtime-controls/: design.md  requirements.md  tasks.md
docs/: themes.md
proptest-regressions/: animation.txt
src/: animation.rs  git.rs  lib.rs  main.rs  ui.rs
src/panes/: editor.rs  file_tree.rs  status_bar.rs  terminal.rs
src/syntax/languages/: mod.rs  svelte.rs
src/theme/: mod.rs
src/theme/themes/: fluorite.rs  mod.rs  telemetry.rs
src/widgets/: selectable_paragraph.rs
tests/: navigation_tests.rs
