[package]
name = "git-logue"
version = "0.1.0"
edition = "2021"
authors = ["unhappychoice"]
description = "A Git history screensaver - watch your code rewrite itself"
license = "MIT"
repository = "https://github.com/unhappychoice/git-logue"

[dependencies]
git2 = "0.19"
ratatui = "0.29"
crossterm = "0.28"
tree-sitter = "0.24"
chrono = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "git-logue"
path = "src/main.rs"
